[gd_scene load_steps=3 format=3 uid="uid://55p1w3qiuc5a"]

[ext_resource type="Texture2D" uid="uid://cphdfui2yv8ja" path="res://icons/icons8-settings-50.png" id="1_2kx4o"]
[ext_resource type="Script" uid="uid://dvuho5fpr6xap" path="res://Scripts/game_canvas_ui.gd" id="1_ywu3o"]

[node name="GameCanvas" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ywu3o")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GlobalSetting" type="Button" parent="CanvasLayer"]
offset_left = 1059.0
offset_top = 12.0
offset_right = 1139.0
offset_bottom = 85.0
icon = ExtResource("1_2kx4o")
icon_alignment = 1
expand_icon = true

[node name="WINTEST" type="Button" parent="CanvasLayer"]
offset_left = 1000.0
offset_top = 94.0
offset_right = 1140.0
offset_bottom = 149.0
text = "TEST WIN"

[node name="LOSETEST" type="Button" parent="CanvasLayer"]
offset_left = 1000.0
offset_top = 164.0
offset_right = 1140.0
offset_bottom = 219.0
text = "LOSE TEST"

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
offset_right = 1153.0
offset_bottom = 649.0
color = Color(0, 0, 0, 0.929412)

[node name="WinHome" type="Button" parent="CanvasLayer/ColorRect"]
layout_mode = 0
offset_left = 614.0
offset_top = 432.0
offset_right = 854.0
offset_bottom = 485.0
theme_override_font_sizes/font_size = 28
text = "HOME"

[node name="WinLobby" type="Button" parent="CanvasLayer/ColorRect"]
layout_mode = 0
offset_left = 329.0
offset_top = 432.0
offset_right = 569.0
offset_bottom = 485.0
theme_override_font_sizes/font_size = 28
text = "LOBBY"

[node name="Label" type="Label" parent="CanvasLayer/ColorRect"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 391.0
offset_top = 229.0
offset_right = 788.0
offset_bottom = 353.0
theme_override_font_sizes/font_size = 90
text = "DEFUSED"

[connection signal="button_down" from="CanvasLayer/GlobalSetting" to="." method="_on_global_setting_button_down"]
[connection signal="button_down" from="CanvasLayer/WINTEST" to="." method="_on_wintest_button_down"]
[connection signal="button_down" from="CanvasLayer/LOSETEST" to="." method="_on_losetest_button_down"]
[connection signal="button_down" from="CanvasLayer/ColorRect/WinHome" to="." method="_on_win_home_button_down"]
